--- a/package.json
+++ b/package.json
@@ -2,14 +2,24 @@
   "name": "oma_telefon",
   "private": true,
   "dependencies": {
+    "@angular/common": "^9.0.7",
+    "@angular/compiler": "^9.0.7",
+    "@angular/core": "^9.0.7",
+    "@angular/platform-browser": "^9.0.7",
+    "@angular/platform-browser-dynamic": "^9.0.7",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
+    "core-js": "^3.6.4",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0"
+    "rxjs": "^6.5.4",
+    "ts-loader": "^6.2.1",
+    "turbolinks": "^5.2.0",
+    "typescript": "^3.8.3",
+    "zone.js": "^0.10.3"
   },
   "version": "0.1.0",
   "devDependencies": {
