--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "oma_telefon",
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.0.7",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "^9.0.7",
     "@angular/compiler": "^9.0.7",
     "@angular/core": "^9.0.7",
+    "@angular/material": "^9.1.3",
     "@angular/platform-browser": "^9.0.7",
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@rails/actioncable": "^6.0.0",
@@ -13,6 +16,7 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "html-loader": "^1.0.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
