--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "^9.0.7",
     "@angular/platform-browser-dynamic": "^9.0.7",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -19,15 +20,18 @@
     "core-js": "^3.6.4",
     "html-loader": "^1.0.0",
     "jquery": "^3.4.1",
+    "leaflet": "^1.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
     "ts-loader": "^6.2.1",
+    "tslib": "^1.11.1",
     "turbolinks": "^5.2.0",
     "typescript": "^3.8.3",
     "zone.js": "^0.10.3"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@types/leaflet": "^1.5.12",
     "webpack-dev-server": "^3.10.3"
   }
 }
